# back

./: .env.example  .gitignore  README.md  docker-compose.yml
web/: .migration.env.example  Dockerfile  alembic.ini  migrations.sh  mypy.ini  pyproject.toml  pytest.ini
web/migrations/: env.py
web/migrations/versions/: 0d2b7897b1f7_genre_create_table.py  29332d846efb_user_create_table.py  3a3ebbaa2f77_maker_taker_create_tables.py  408d5e76470a_token_create_table.py  57ceef70767a_book_author_book_genre_create_tables.py  630d9f743a1b_wish_list_create_tables.py  66b0e28ff85e_user_address_create_inactive_else_user_.py  90ae42d7021e_user_address_create_table.py
web/src/api/: main.py
web/src/api/auth/: dto.py  router.py
web/src/api/book/: dto.py  router.py
web/src/api/default/: router.py
web/src/api/exchange/: dto.py  router.py
web/src/api/genre/: dto.py  router.py
web/src/api/user/: dto.py  router.py
web/src/api/wish_list/: dto.py  router.py
web/src/config/: auth.py  mail.py  postgres.py  web.py
web/src/database/postgres/: connection.py  depends.py  models.py
web/src/domain/abc/: dal.py  dto.py  model.py
web/src/domain/auth/: depends.py  dto.py  exception.py  service.py
web/src/domain/author/: dal.py  dto.py  exception.py  model.py
web/src/domain/book/: dal.py  exception.py  model.py  service.py
web/src/domain/book_genre/: dal.py  exception.py  model.py
web/src/utils/: constansts.py  router_utils.py  time_utils.py
web/tests/: conftest.py
web/tests/fixture/: connection.py  migration.py
web/tests/src/: test_main.py
(+39 files in other folders)
