[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["maxim-f1 <maxconal228@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.38"
uvicorn = "^0.34.0"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
alembic-utils = "^0.8.6"
pydantic = {extras = ["email"], version = "^2.10.6"}
fastapi-mail = "^1.4.2"
pyjwt = "^2.10.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"
pytest-env = "^1.1.5"
faker = "^36.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
